@startuml
'skinparam nodesep 15
'skinparam ranksep 0
'skinparam linetype ortho

left to right direction
hide empty members

note top of GameController
Vi bruger:
- GuiView som View
- GuiView som BasicUserIO
end note
note top of GuiView
GuiView kommunikerer med GUI jar
i update metoden som den får fra View
end note
class GameController {
    + void playGame()
}
interface BasicUserIO {
    + int promptChoice(Message, Message...)
    + void showMessage(Message)
}

class GuiView {
    + void update(Player[], Field[], DiceCup)
}

interface View {
    + void update(Player[], Field[], DiceCup)
}
'class TestIO{
'    ~ int promptChoice(Message, Message)
'    + void showMessage(Message)
'}

class matador.gui_main.GUI{}

View -right[hidden]-> BasicUserIO
GameController o-- BasicUserIO
GameController o-- View
GuiView .up.|> View
GuiView .up.|> BasicUserIO
GuiView o-- matador.gui_main.GUI

@enduml